--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <i class="fas fa-project-diagram"></i>
                             </div>
                             <div class="stat-content">
-                                <h3 class="stat-number" data-target="150">0</h3>
+                                <h3 class="stat-number" data-target="10">0</h3>
                                 <p>Projects Completed</p>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 <i class="fas fa-smile"></i>
                             </div>
                             <div class="stat-content">
-                                <h3 class="stat-number" data-target="50">0</h3>
+                                <h3 class="stat-number" data-target="8">0</h3>
                                 <p>Happy Clients</p>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                                 <i class="fas fa-award"></i>
                             </div>
                             <div class="stat-content">
-                                <h3 class="stat-number" data-target="5">0</h3>
+                                <h3 class="stat-number" data-target="1">0</h3>
                                 <p>Years Experience</p>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
             </div>
             
             <div class="team-preview scroll-fade-in">
-                <h3>Meet Our Team</h3>
+                <h3>Profile</h3>
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-image">
@@ -185,8 +185,8 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h4>John Doe</h4>
-                            <p>Lead Developer</p>
+                            <h4>Ankit</h4>
+                            <p>Project Manager</p>
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-github"></i></a>
@@ -201,8 +201,8 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h4>Jane Smith</h4>
-                            <p>UI/UX Designer</p>
+                            <h4>Abhishek Vishwakarma</h4>
+                            <p>WEB DEVELOPER</p>
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-dribbble"></i></a>
@@ -217,8 +217,8 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h4>Mike Johnson</h4>
-                            <p>Project Manager</p>
+                            <h4>Aditya</h4>
+                            <p>Full Stack Developer</p>
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -291,7 +291,7 @@
                                         <div class="package-card">
                                             <div class="package-header">
                                                 <h5>Basic Website</h5>
-                                                <div class="price">$999</div>
+                                                <div class="price">$699</div>
                                             </div>
                                             <ul class="package-features">
                                                 <li>5 Page Website</li>
@@ -300,13 +300,18 @@
                                                 <li>Contact Form</li>
                                                 <li>1 Month Support</li>
                                             </ul>
-                                            <button class="btn btn-outline">Get Started</button>
+                                           
+<button class="btn btn-primary get-started-btn">Get Started</button>
+
+
+
+
                                         </div>
                                         <div class="package-card featured">
                                             <div class="package-badge">Most Popular</div>
                                             <div class="package-header">
                                                 <h5>Business Website</h5>
-                                                <div class="price">$2,499</div>
+                                                <div class="price">$999</div>
                                             </div>
                                             <ul class="package-features">
                                                 <li>10-15 Page Website</li>
@@ -315,12 +320,20 @@
                                                 <li>CMS Integration</li>
                                                 <li>3 Months Support</li>
                                             </ul>
-                                            <button class="btn btn-primary">Get Started</button>
+                                          <button 
+  class="btn btn-primary get-started-btn"
+  data-service="web"
+  data-package="Business Website">
+  Get Started
+</button>
+
+  
+
                                         </div>
                                         <div class="package-card">
                                             <div class="package-header">
                                                 <h5>E-commerce</h5>
-                                                <div class="price">$4,999</div>
+                                                <div class="price">$1299</div>
                                             </div>
                                             <ul class="package-features">
                                                 <li>Online Store</li>
@@ -329,7 +342,9 @@
                                                 <li>Admin Dashboard</li>
                                                 <li>6 Months Support</li>
                                             </ul>
-                                            <button class="btn btn-outline">Get Started</button>
+   <button class="btn btn-primary get-started-btn">Get Started</button>
+
+
                                         </div>
                                     </div>
                                 </div>
@@ -423,7 +438,7 @@
                                         <div class="package-card">
                                             <div class="package-header">
                                                 <h5>Basic Editing</h5>
-                                                <div class="price">$299</div>
+                                                <div class="price">$79</div>
                                             </div>
                                             <ul class="package-features">
                                                 <li>Up to 5 min video</li>
@@ -432,13 +447,14 @@
                                                 <li>Audio Cleanup</li>
                                                 <li>2 Revisions</li>
                                             </ul>
-                                            <button class="btn btn-outline">Get Started</button>
+                                           <a class="btn btn-primary get-started-btn"  href="get-started-video.html" class="btn-primary">Get Started</a>
+
                                         </div>
                                         <div class="package-card featured">
                                             <div class="package-badge">Most Popular</div>
                                             <div class="package-header">
                                                 <h5>Professional Edit</h5>
-                                                <div class="price">$699</div>
+                                                <div class="price">$199</div>
                                             </div>
                                             <ul class="package-features">
                                                 <li>Up to 15 min video</li>
@@ -447,12 +463,13 @@
                                                 <li>Sound Design</li>
                                                 <li>5 Revisions</li>
                                             </ul>
-                                            <button class="btn btn-primary">Get Started</button>
+                                           <a class="btn btn-primary get-started-btn" href="get-started-video.html" class="btn-primary">Get Started</a>
+
                                         </div>
                                         <div class="package-card">
                                             <div class="package-header">
                                                 <h5>Premium Production</h5>
-                                                <div class="price">$1,499</div>
+                                                <div class="price">$499</div>
                                             </div>
                                             <ul class="package-features">
                                                 <li>Unlimited Length</li>
@@ -461,7 +478,8 @@
                                                 <li>Professional Audio Mix</li>
                                                 <li>Unlimited Revisions</li>
                                             </ul>
-                                            <button class="btn btn-outline">Get Started</button>
+                                           <a class="btn btn-primary get-started-btn"  href="get-started-video.html" class="btn-primary">Get Started</a>
+
                                         </div>
                                     </div>
                                 </div>
@@ -829,15 +847,15 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>123 Design Street, Creative City</p>
+                        <p>Ghatkopar , Mumbai</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <p>+1 (555) 123-4567</p>
+                        <p>+91 9321535540</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p>hello@example.com</p>
+                        <p>abhishekvish3947@gmail.com</p>
                     </div>
                 </div>
                 <form class="contact-form">
