--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home" id="logo">Brand<span>Logo</span></a>
+                <a href="#home" id="logo">Freelance<span>Projects</span></a>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
